--- a/luogulofrontend/index.html
+++ b/luogulofrontend/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luogulo</title>
-        <link rel="stylesheet" type="text/css" href="https://hfs.lzx.smallfang.fun/style/all.min.css">
-        <link rel="stylesheet" type="text/css" href="https://hfs.lzx.smallfang.fun/style/semantic.min.css">
-        <!-- <link rel="stylesheet" type="text/css" href="https://hfs.lzx.smallfang.fun/style/rtui.css"> -->
+	<link rel="stylesheet" href="https://cdn.bootcss.com/KaTeX/0.11.1/katex.min.css">
+    <title>Luogulog</title>
+        <!-- <link rel="stylesheet" type="text/css" href="https://hfs.lzx.smallfang.fun/style/all.min.css"> -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.css">
+        <!-- <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.js"></script> -->
+		<!-- <link rel="stylesheet" type="text/css" href="https://hfs.lzx.smallfang.fun/style/rtui.css"> -->
+		<!-- <script defer src="https://cdn.bootcss.com/KaTeX/0.11.1/katex.min.js"></script>
+	<script defer>
+		//KaTeX配置
+	</script>
+	<script defer src="https://cdn.bootcss.com/KaTeX/0.11.1/contrib/auto-render.min.js"></script>
+-->
 </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/geopattern/1.2.3/js/geopattern.min.js"></script> -->
+<!-- <script>
+	var katex_config = {
+			delimiters: 
+			[
+				{left: "$$", right: "$$", display: true},
+				{left: "$", right: "$", display: false}
+			]
+		};
+	let start = false;
+	function renders() {
+		if (start == true) {
+			renderMathInElement(document.body,katex_config)
+		}
+	}
+</script> -->
+<!-- <script defer src="https://cdn.bootcss.com/KaTeX/0.11.1/contrib/auto-render.min.js" onload="renderMathInElement(document.body,katex_config);"></script> -->
 </body>
 </html>
